# blackpearlorigin

./: .gitignore  .prettierrc  CHANGELOG.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LOCALIZATION.md  NewStylesheet.css  README.md  bun.lockb  index.html  library.db  package-lock.json  package.json  svelte.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.config.ts.timestamp-1703784273308.mjs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 🐛-bug-report.md  💡-feature-request.md
.github/workflow/: test-pr.yml
.github/workflows/: main.yml  publish.yml  test-pr.yml  test-push.yml
public/: test.json
src/: App.svelte  Main.svelte  Typings.d.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  main.rs  paths.rs  startup.rs
src-tauri/src/commands/: database.rs  logging.rs  metadata.rs  mod.rs
src-tauri/src/commands/scrapers/: fitgirl.rs  mod.rs  rezi.rs
src-tauri/src/migrations/: 1_down.sql  1_up.sql
src-tauri/src/models/: game.rs
src-tauri/src/plugins/: interface.rs  mod.rs
src-tauri/static/: index.html
src/components/: Browse.svelte  Downloads.svelte  Home.svelte  Library.svelte  Preferences.svelte  Sidebar.svelte
src/components/modals/: NewGame.svelte
src/lib/: Greet.svelte
src/locale/: i18n.ts  languages.json  locales.ts
src/locale/lang/: af.json  ar.json  ba.json  bg.json  cz.json  de.json  ee.json  en.json  eo.json  fi.json  fr.json  hr.json  hu.json  it.json  lt.json  lv.json  nl.json  pl.json  pt-BR.json  pt-PT.json  pt.json  ro.json  ru.json  se.json  sr.json  tr.json
src/panels/: Browse.svelte  Browse.ts  Downloads.svelte  Home.svelte  Library.svelte  Library.ts  Preferences.svelte
src/panels/lib/: NewGame.svelte
src/routes/: Browse.svelte  Home.svelte  Library.svelte  Preferences.svelte  Steam.svelte
src/routes/modals/: NewGame.svelte  Toast.svelte
src/routes/private/: Downloads.svelte  Home.svelte
src/scripts/: Browse.ts  Downloads.ts  Home.ts  Interfaces.ts  Library.ts  Main.ts  Preferences.ts
src/scripts/private/: Home.ts
src/styles/: Browse.css  Browse.scss  Downloads.css  Global.css  Global.scss  Home.css  Home.scss  Library.css  Library.scss  Modal.css  Modal.scss  NewGame.css  Preferences.css  Preferences.scss  Steam.scss  _Browse.scss  _Library.scss  _Modal.scss  _Preferences.scss  style-variables.txt
src/styles/private/: Downloads.scss  Home.scss
