[package]
name = "project_black_pearl"
version = "0.2.0"
description = "Unify your game sources in one place by using modules made by the community. "
authors = ["zun1uwu", "infinity-plus", "Brisolo32", "Contributors of Project Black Pearl"]
license = "BSD-3-Clause"
repository = "https://github.com/ProjectBlackPearl/pbpl"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
rfd = "0.10.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
rusqlite_migration = "1.0.1"
execute = "0.2.11"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all", "macos-private-api", "system-tray"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
lazy_static = "1.4.0"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
